tests/analyzer/errors/match_bool.ray
fn getBool() -> bool { return false }

fn main() {
    match true {
        getBool() => print true
        else => print false
    }
}
